# PopupBlocker

./: CMakeLists.txt  CMakePresets.json  README  README.md
hook/: PopupBlockerHook.cpp
shared/: RulesShared.h
test/: TestPopup.cpp
ui/: main.cpp
